Feat: Add plugin generator

--- a/templates/plugin/language/en-GB/en-GB.plg_plugintype_pluginname.ini
+++ b/templates/plugin/language/en-GB/en-GB.plg_plugintype_pluginname.ini
@@ -1,11 +1,11 @@
 ; @package     Joomla.Plugin
-; @subpackage  {{ sentenceCase pluginType }}.{{ lowerCase pluginName }}
+; @subpackage  {{ lowerCase pluginName }}
 ; @copyright   {{ copyright }}
 ; @license     {{ licence }}
 ; Note: All ini files need to be saved as UTF-8
 
 PLG_{{ constantCase pluginType }}_{{ constantCase pluginName }}="{{ sentenceCase pluginType }} - {{ sentenceCase pluginName }}"
-PLG_{{ constantCase pluginType }}_{{ constantCase pluginName }}_XML_DESCRIPTION="{{ sentenceCase pluginType }} - {{ sentenceCase pluginName }} plugin"
+PLG_{{ constantCase pluginType }}_{{ constantCase pluginName }}_XML_DESCRIPTION="{{ sentenceCase pluginName }} {{ sentenceCase pluginType }} plugin"
 
 ; Params
 ; PLG_{{ constantCase pluginType }}_{{ constantCase pluginName }}_EXAMPLE_FIELD_LABEL="Example Option"
