Feat: fixes for - lang file convention - extra quote - added overrides for save in controller, model

--- a/templates/component/languages/administrator/en-GB/en-GB.form.ini
+++ b/templates/component/languages/administrator/en-GB/en-GB.form.ini
@@ -11,5 +11,6 @@ COM_{{ constantCase componentName }}_ADD_{{ constantCase entityName }}_TITLE="Ad
 COM_{{ constantCase componentName }}_EDIT_{{ constantCase entityName }}_TITLE="Edit {{ sentenceCase entityName }}"
 
 ; {{ sentenceCase viewName }} XML
-COM_{{ constantCase componentName }}_FORM_LBL_{{ constantCase viewName }}_NAME="Name"
-COM_{{ constantCase componentName }}_FORM_DESC_{{ constantCase viewName }}_NAME="Enter name"
+COM_{{ constantCase componentName }}_MSG_SUCCESS_SAVE_{{ constantCase viewName }}="{{ sentenceCase entityName }} saved successfully"
+COM_{{ constantCase componentName }}_FORM_{{ constantCase viewName }}_NAME_LBL="Name"
+COM_{{ constantCase componentName }}_FORM_{{ constantCase viewName }}_NAME_DESC="Enter name"
