Feat: Add lang. constants for searchtools ordering options

--- a/templates/component/languages/administrator/en-GB/en-GB.list.ini
+++ b/templates/component/languages/administrator/en-GB/en-GB.list.ini
@@ -26,3 +26,13 @@ COM_{{ constantCase componentName }}_N_ITEMS_UNPUBLISHED_1="%d record successful
 COM_{{ constantCase componentName }}_{{ constantCase viewName }}_PAGE_TITLE="{{ sentenceCase viewName }}"
 COM_{{ constantCase componentName }}_{{ constantCase viewName }}_NAME="Name"
 COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ID="ID"
+
+; {{ sentenceCase viewName }} - search tools ordering
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ID_ASC="ID Ascending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ID_DESC="ID Descending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_NAME_ASC="Name Ascending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_NAME_DESC="Name Descending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ORDERING_ASC="Order Ascending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ORDERING_DESC="Order Descending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_STATE_ASC="State Ascending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_STATE_DESC="State Descending"
