--- a/templates/component/languages/site/en-GB/en-GB.list.ini
+++ b/templates/component/languages/site/en-GB/en-GB.list.ini
@@ -20,3 +20,13 @@ COM_{{ constantCase componentName }}_TITLE_LIST_VIEW_{{ constantCase entityName 
 ; {{ sentenceCase viewName }} view
 COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ID="ID"
 COM_{{ constantCase componentName }}_{{ constantCase viewName }}_NAME="Name"
+
+; {{ sentenceCase viewName }} - search tools ordering
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ID_ASC="ID Ascending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ID_DESC="ID Descending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_NAME_ASC="Name Ascending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_NAME_DESC="Name Descending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ORDERING_ASC="Order Ascending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ORDERING_DESC="Order Descending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_STATE_ASC="State Ascending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_STATE_DESC="State Descending"
