--- a/templates/component/languages/administrator/en-GB/en-GB.form.ini
+++ b/templates/component/languages/administrator/en-GB/en-GB.form.ini
@@ -12,5 +12,5 @@ COM_{{ constantCase componentName }}_EDIT_{{ constantCase entityName }}_TITLE="E
 
 ; {{ sentenceCase viewName }} XML
 COM_{{ constantCase componentName }}_MSG_SUCCESS_SAVE_{{ constantCase viewName }}="{{ sentenceCase entityName }} saved successfully"
-COM_{{ constantCase componentName }}_FORM_{{ constantCase viewName }}_NAME_LBL="Name"
-COM_{{ constantCase componentName }}_FORM_{{ constantCase viewName }}_NAME_DESC="Enter name"
+COM_{{ constantCase componentName }}_FORM_{{ constantCase viewName }}_TITLE_LBL="Title"
+COM_{{ constantCase componentName }}_FORM_{{ constantCase viewName }}_TITLE_DESC="Enter Title"
