--- a/templates/component/languages/site/en-GB/en-GB.form.ini
+++ b/templates/component/languages/site/en-GB/en-GB.form.ini
@@ -15,5 +15,5 @@ COM_{{ constantCase componentName }}_TITLE_FORM_VIEW_{{ constantCase entityName 
 COM_{{ constantCase componentName }}_TITLE_FORM_VIEW_{{ constantCase entityName }}_DESC="{{ sentenceCase entityName }} form view"
 
 ; {{ sentenceCase viewName }} XML
-COM_{{ constantCase componentName }}_FORM_{{ constantCase viewName }}_NAME_LBL="Name"
-COM_{{ constantCase componentName }}_FORM_{{ constantCase viewName }}_NAME_DESC="Enter name"
+COM_{{ constantCase componentName }}_FORM_{{ constantCase viewName }}_TITLE_LBL="Title"
+COM_{{ constantCase componentName }}_FORM_{{ constantCase viewName }}_TITLE_DESC="Enter Title"
