--- a/templates/component/languages/administrator/en-GB/en-GB.list.ini
+++ b/templates/component/languages/administrator/en-GB/en-GB.list.ini
@@ -24,14 +24,14 @@ COM_{{ constantCase componentName }}_N_ITEMS_UNPUBLISHED_1="%d record successful
 
 ; {{ sentenceCase viewName }} - list view
 COM_{{ constantCase componentName }}_{{ constantCase viewName }}_PAGE_TITLE="{{ sentenceCase viewName }}"
-COM_{{ constantCase componentName }}_{{ constantCase viewName }}_NAME="Name"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_TITLE="Title"
 COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ID="ID"
 
 ; {{ sentenceCase viewName }} - search tools ordering
 COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ID_ASC="ID Ascending"
 COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ID_DESC="ID Descending"
-COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_NAME_ASC="Name Ascending"
-COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_NAME_DESC="Name Descending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_TITLE_ASC="Title Ascending"
+COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_TITLE_DESC="Title Descending"
 COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ORDERING_ASC="Order Ascending"
 COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_ORDERING_DESC="Order Descending"
 COM_{{ constantCase componentName }}_{{ constantCase viewName }}_ORDER_STATE_ASC="State Ascending"
